kubernetes/apps/atomic-red/atomic-red/app/atomic-red-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: atomic-red
  namespace: atomic-red
  labels:
    app: atomic-red
spec:
  replicas: 1
  selector:
    matchLabels:
      app: atomic-red
  template:
    metadata:
      labels:
        app: atomic-red
    spec:
      containers:
        - name: atomic-red
          image: ghcr.io/cowdogmoo/atomic-red:latest@sha256:20d9a6cc24476e86cc352e14d29f6e6e359ff3ef9fd24c5a1a3e675914eb0ca2
          imagePullPolicy: IfNotPresent
          command: ["/bin/bash", "-ec", "while :; do echo '.'; sleep 5 ; done"]
          securityContext:
            privileged: true
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 1000m
              memory: 2048Mi
