kubernetes/apps/atomic-red/atomic-red/app/atomic-red-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    # External DNS Annotations
    external-dns.alpha.kubernetes.io/hostname: atomic-red.techvomit.xyz
  name: atomic-red
  namespace: atomic-red
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: atomic-red
