kubernetes/apps/atomic-red/atomic-red/app/atomic-red-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: atomic-red
  namespace: atomic-red
spec:
  ingressClassName: ingress-traefik
  rules:
    - host: &host atomic-red.techvomit.xyz
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: atomic-red
                port:
                  number: 80
            path: /
  tls:
    - hosts:
        - *host
      secretName: techvomit-xyz-production-tls
